kubernetes-deploy/cluster-bundle/manifests-local-openvre/manifest/networkpolicy-postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-ingress
  labels:
    app.kubernetes.io/part-of: bsc-tre
spec:
  podSelector:
    matchLabels:
      app: dashboard-postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dashboard-keycloak
    ports:
    - protocol: TCP
      port: 5432
